--- a/Finn/Views/MainView.axaml
+++ b/Finn/Views/MainView.axaml
@@ -11,7 +11,7 @@
 			 xmlns:converter="clr-namespace:Finn.Converters"
 			 xmlns:ic="using:FluentIcons.Avalonia" 
 			 xmlns:icxt="using:FluentIcons.Avalonia.MarkupExtensions" 
-			 mc:Ignorable="d" d:DesignWidth="1400" d:DesignHeight="800"
+			 mc:Ignorable="d" d:DesignWidth="1400" d:DesignHeight="900"
              x:Class="Finn.Views.MainView"
 			 x:DataType="vm:MainViewModel">
 
@@ -50,6 +50,60 @@
 		<FontFamily x:Key="Work Sans">avares://Finn/Assets/Fonts#Work Sans</FontFamily>
 
 	</UserControl.Resources>
+
+	<UserControl.Styles>
+		<Style Selector="Border">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+		</Style>
+
+		<Style Selector="Button">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+		</Style>
+
+		<Style Selector="ToggleButton">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+		</Style>
+
+		<Style Selector="TextBox">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Padding" Value="5,9,5,9"/>
+		</Style>
+		<Style Selector="TextBox /template/ ContentPresenter">
+			<Setter Property="Margin" Value="5"/>
+		</Style>
+		<Style Selector="TextBox /template/ Border#PART_BorderElement">
+			<Setter Property="BoxShadow" Value="{Binding Storage.General.Shadow}"/>
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Margin" Value="5"/>
+		</Style>
+
+
+		<Style Selector="ComboBox">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Padding" Value="5"/>
+		</Style>
+		<Style Selector="ComboBox /template/ ContentControl#ContentPresenter">
+			<Setter Property="Padding" Value="10,0,0,0"/>
+		</Style>
+		<Style Selector="ComboBox /template/ Border#Background">
+			<Setter Property="BoxShadow" Value="{Binding Storage.General.Shadow}"/>
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Margin" Value="5"/>
+		</Style>
+
+
+		<Style Selector="DataGrid">
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Padding" Value="5"/>
+		</Style>
+
+		<Style Selector="DataGrid /template/ Border#DataGridBorder">
+			<Setter Property="BoxShadow" Value="{Binding Storage.General.Shadow}"/>
+			<Setter Property="CornerRadius" Value="{Binding Storage.General.CornerRadius}"/>
+			<Setter Property="Margin" Value="5"/>
+		</Style>
+
+	</UserControl.Styles>
 
 			<Grid Name ="MainGrid" DragDrop.AllowDrop="True" ColumnDefinitions="Auto,*,0,Auto,Auto,Auto,Auto" RowDefinitions="35,33,*" Margin="5">
 				<DockPanel Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Top" HorizontalAlignment="Left">
@@ -459,9 +513,9 @@
 						<Grid Grid.Row="2" ColumnDefinitions="*" IsVisible="{Binding ShowFolders}" MinHeight="200" MaxHeight="600">
 							<Grid Grid.Column="0" RowDefinitions="200,35">
 								<Grid Grid.Row="1" ColumnDefinitions="2*,7*,1.5*">
-									<TextBox Grid.Column="0" Height="30" Watermark="Name" Text="{Binding CurrentFolder.Name}"/>
-									<TextBox Grid.Column="1" Height="30" Watermark="Path" Text="{Binding CurrentFolder.Path}"/>
-									<ComboBox Grid.Column="2" Height="30" HorizontalAlignment="Stretch" SelectedItem="{Binding CurrentFolder.Filetype}" ItemsSource="{Binding CurrentProject.AllowedTypes}" />
+									<TextBox Grid.Column="0" Watermark="Name" Text="{Binding CurrentFolder.Name}"/>
+									<TextBox Grid.Column="1" Watermark="Path" Text="{Binding CurrentFolder.Path}"/>
+									<ComboBox Grid.Column="2" HorizontalAlignment="Stretch" SelectedItem="{Binding CurrentFolder.Filetype}" ItemsSource="{Binding CurrentProject.AllowedTypes}" />
 					
 								</Grid>
 	
@@ -496,7 +550,7 @@
 
 				<GridSplitter Name="PreviewSplitter" Grid.Column="2" Grid.Row="2" Background="Transparent" ResizeDirection="Columns" Width="5" IsEnabled="{Binding PreviewEmbeddedOpen}"/>
 
-				<Grid Grid.Row="6" Grid.Column="4" RowDefinitions="250,40,*" IsVisible="{Binding TimeSheetOpen}" Width="500">
+				<Grid Grid.Row="6" Grid.Column="4" RowDefinitions="250,35,*" IsVisible="{Binding TimeSheetOpen}" Width="500">
 
 					<DataGrid Grid.Row="0" Name="ProjectList" ItemsSource="{Binding Storage.General.TimeProjects}" SelectedItem="{Binding CurrentTimeSheetProject}" CornerRadius="{Binding Storage.General.CornerRadius}" IsReadOnly="True" >
 						<DataGrid.Styles>
@@ -516,10 +570,10 @@
 
 					<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left">
 						
-						<StackPanel Grid.Row="2" Orientation="Horizontal" Spacing="5">
-							<TextBox Name="InputName" Text="{Binding CurrentTimeSheetProject.Project}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="160" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="New Project"/>
+						<StackPanel Grid.Row="2" Orientation="Horizontal">
+							<TextBox Name="InputName" Text="{Binding CurrentTimeSheetProject.Project}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="170" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="New Project"/>
 							<TextBox Name="ProjectNr" Text="{Binding CurrentTimeSheetProject.ProjectNr}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="150" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="Project Nr"/>
-							<TextBox Name="Task" Text="{Binding CurrentTimeSheetProject.Task}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="90" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="Task"/>						
+							<TextBox Name="Task" Text="{Binding CurrentTimeSheetProject.Task}" MinWidth="0" VerticalContentAlignment="Stretch" VerticalAlignment="Stretch" Width="100" CornerRadius="{Binding Storage.General.CornerRadius}" Watermark="Task"/>						
 						</StackPanel>
 
 						<Button Width="35" Click="NewTimeSheetProject">
@@ -546,7 +600,7 @@
 
 				</Grid>
 
-				<Grid Grid.Row="6" Grid.Column="5" RowDefinitions="Auto,40,40,3*,2*,40,15*" IsVisible="{Binding CalendarOpen}" Width="320">
+				<Grid Grid.Row="6" Grid.Column="5" RowDefinitions="Auto,38,35,3*,2*,35,15*" IsVisible="{Binding CalendarOpen}" Width="320">
 					<Border Grid.Row="0" Margin="5" BoxShadow="{Binding Storage.General.Shadow}" CornerRadius="{Binding Storage.General.CornerRadius}" Background="{DynamicResource TextControlBackground}" Width="310" Height="345">
 						<StackPanel Orientation="Vertical">
 							<Calendar Grid.Column="0" Height="310" Background="Transparent" HorizontalAlignment="Center" DisplayDate="{Binding SelectedDateTime, Mode=TwoWay}" SelectedDate="{Binding SelectedDateTime, Mode=TwoWay}" BorderBrush="Transparent" FontSize="{Binding Storage.General.FontSize}">
@@ -557,7 +611,6 @@
 		
 									<Style Selector="CalendarDayButton">
 										
-
 										<Style Selector="^ /template/ Border#Root">
 											<Setter Property="CornerRadius" Value="15" />
 										</Style>
@@ -588,14 +641,12 @@
 											<Style Selector="^ /template/ ContentPresenter">
 												<Setter Property="Foreground" Value="Gray" />
 											</Style>
-
-
 										</Style>
 								
 									</Style>
 								</Calendar.Styles>
 							</Calendar>
-							<Grid ColumnDefinitions="*,40">
+							<Grid ColumnDefinitions="*,35">
 								<StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Center">
 									<TextBlock Text="{Binding CurrentCalendarData.Date}" FontWeight="Bold"/>
 									<TextBlock Text="  |  "/>
@@ -610,9 +661,9 @@
 						</StackPanel>
 					</Border>
 
-					<StackPanel Grid.Row="1" Orientation="Horizontal">
-						<ComboBox Width="72" Height="35" Name="HoursCombo" ItemsSource="{Binding Hours}" SelectedItem="{Binding CurrentTimeSheet.Hours}"/>
-						<ComboBox Width="140" Height="35" ItemsSource="{Binding Storage.General.TimeProjects}" SelectedValue="{Binding CurrentTimeSheet.Project}" SelectedValueBinding="{Binding Project}">						
+					<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="2">
+						<ComboBox Width="72" Margin="0,0,0,0" Name="HoursCombo" ItemsSource="{Binding Hours}" SelectedItem="{Binding CurrentTimeSheet.Hours}"/>
+						<ComboBox Width="140" Margin="0,0,0,0" ItemsSource="{Binding Storage.General.TimeProjects}" SelectedValue="{Binding CurrentTimeSheet.Project}" SelectedValueBinding="{Binding Project}">						
 							<ComboBox.ItemTemplate>
 								<DataTemplate>
 									<TextBlock Text="{Binding Project}"/>
@@ -626,31 +677,32 @@
 						<Button Width="30" Command="{Binding RemoveTimeSheet}">
 							<ic:SymbolIcon Symbol="Delete" FontSize="18"/>
 						</Button>
-						<ToggleButton Width="30" IsChecked="{Binding TimeSheetOpen}" Padding="0">
+						<ToggleButton Width="30" IsChecked="{Binding TimeSheetOpen}" Height="30" Padding="0">
 							<ic:SymbolIcon Symbol="WindowEdit" FontSize="18"/>
 						</ToggleButton>
 					</StackPanel>
 
-					<TextBox Grid.Row="2" Text="{Binding CurrentTimeSheet.Diary}" FontSize="15" Watermark="Diary"/>
+					<TextBox Grid.Row="2" Text="{Binding CurrentTimeSheet.Diary}" FontSize="14" Watermark="Diary"/>
 
-					<DataGrid  Grid.Row="3" Name="MontlyNotes" Padding="0" ItemsSource="{Binding CurrentCalendarData.TimeSheets}" SelectedItem="{Binding CurrentTimeSheet, Mode=TwoWay}" SelectionMode="Single" AutoGenerateColumns="False"
-								IsReadOnly="True" GridLinesVisibility="None" LoadingRow="DataGrid_OnLoadingRow" RowHeight="22" HeadersVisibility="None">
+					<DataGrid  Grid.Row="3" Name="MontlyNotes" ItemsSource="{Binding CurrentCalendarData.TimeSheets}" SelectedItem="{Binding CurrentTimeSheet, Mode=TwoWay}"
+								IsReadOnly="True" RowHeight="22" HeadersVisibility="None">
 						<DataGrid.Styles>
 							<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
 								<Setter Property="IsVisible" Value="false" />
 							</Style>
 						</DataGrid.Styles>
 						<DataGrid.Columns>
-							<DataGridTextColumn Binding="{Binding Hours}" Header="" Width="32" MinWidth="32" FontSize="15"/>
-							<DataGridTextColumn Binding="{Binding Project}" Header="" Width="Auto" FontSize="15"/>
-							<DataGridTextColumn Binding="{Binding Diary}" Header="" Width="*" FontSize="15"/>
+							<DataGridTextColumn Binding="{Binding Hours}" Width="32" MinWidth="32" FontSize="14"/>
+							<DataGridTextColumn Binding="{Binding Project}" Width="Auto" FontSize="14"/>
+							<DataGridTextColumn Binding="{Binding Diary}" Width="*" FontSize="14"/>
 						</DataGrid.Columns>
+		
 					</DataGrid>
 
-					<TextBox Grid.Row="4" Text="{Binding CurrentCalendarData.Note1}" Watermark="Notepad" AcceptsReturn="True" AcceptsTab="True"/>
+					<TextBox Grid.Row="4" Text="{Binding CurrentCalendarData.Note1}" Watermark="Notepad" AcceptsReturn="True" AcceptsTab="True" FontSize="14" VerticalAlignment="Stretch"/>
 					
 					
-					<TextBox Grid.Row="5" Text="{Binding CurrentCalendarData.Reminder}" Watermark="Reminder"/>
+					<TextBox Grid.Row="5" Text="{Binding CurrentCalendarData.Reminder}" Watermark="Reminder" FontSize="14"/>
 					
 					
 					<DataGrid Grid.Row="6" Name="TimeSheet" Padding="0" ItemsSource="{Binding MonthlyNotes}" SelectedItem="{Binding CurrentCalendarData, Mode=TwoWay}" SelectionMode="Single" AutoGenerateColumns="False"
@@ -662,7 +714,7 @@
 						</DataGrid.Styles>
 						<DataGrid.Columns>
 							<DataGridTextColumn Binding="{Binding DateStringIcon}" Header="Date" Width="Auto" FontSize="14"/>
-							<DataGridTextColumn Binding="{Binding Reminder}" Header="Reminder" Width="*" MinWidth="100" Foreground="{DynamicResource SystemAccentColor}" FontSize="15"/>
+							<DataGridTextColumn Binding="{Binding Reminder}" Header="Reminder" Width="*" MinWidth="100" Foreground="{DynamicResource SystemAccentColor}" FontSize="14"/>
 						</DataGrid.Columns>
 						<DataGrid.ContextMenu>
 							<ContextMenu>
@@ -686,10 +738,10 @@
 					</Grid.RowDefinitions>
 
 					
-					<TextBox Grid.Row="0" IsVisible="{Binding Storage.General.TrayNote}" VerticalContentAlignment="Top" Text="{Binding CurrentFile.Note}" Watermark="File Notepad" AcceptsReturn="True" AcceptsTab="True"/>
+					<TextBox Grid.Row="0" IsVisible="{Binding Storage.General.TrayNote}" VerticalContentAlignment="Top" Text="{Binding CurrentFile.Note}" Watermark="File Notepad" AcceptsReturn="True" VerticalAlignment="Stretch" AcceptsTab="True"/>
 					
 					<StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5" IsVisible="{Binding Storage.General.TrayCollections}">
-						<TextBox Name="CollectionInput" Width="170" Height="30" Watermark="Add Collection"/>
+						<TextBox Name="CollectionInput" Width="170" Watermark="Add Collection"/>
 						<Button Width="35" Click="OnNewCollection">
 							<ic:SymbolIcon Symbol="Add" FontSize="18"/>
 						</Button>
@@ -701,7 +753,7 @@
 						</Button>
 					</StackPanel>
 
-					<DataGrid Grid.Row="2" IsVisible="{Binding Storage.General.TrayCollections}" Name="Collections" Padding="0" ItemsSource="{Binding Storage.General.Collections}" SelectedItem="{Binding CurrentCollection}" SelectionMode="Single" AutoGenerateColumns="False" 
+					<DataGrid Grid.Row="2" IsVisible="{Binding Storage.General.TrayCollections}" Name="Collections" ItemsSource="{Binding Storage.General.Collections}" SelectedItem="{Binding CurrentCollection}" SelectionMode="Single" AutoGenerateColumns="False" 
 								IsReadOnly="True" GridLinesVisibility="None" LoadingRow="DataGrid_OnLoadingRow">
 						<DataGrid.Styles>
 							<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
@@ -713,7 +765,7 @@
 						</DataGrid.Columns>
 					</DataGrid>						
 
-					<DataGrid Grid.Row="3" IsVisible="{Binding Storage.General.TrayCollections}" Name="CollectionContent" Padding="0" ItemsSource="{Binding CollectionContent, Mode=OneWay}" SelectionMode="Single" AutoGenerateColumns="False" IsReadOnly="True" GridLinesVisibility="None" 
+					<DataGrid Grid.Row="3" IsVisible="{Binding Storage.General.TrayCollections}" Name="CollectionContent" ItemsSource="{Binding CollectionContent, Mode=OneWay}" SelectionMode="Single" AutoGenerateColumns="False" IsReadOnly="True" 
 								LoadingRow="DataGrid_OnLoadingRow" ToolTip.ServiceEnabled="{Binding ShowThumbnails}">
 						<DataGrid.Styles>
 
@@ -750,7 +802,7 @@
 
 					<Grid Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="1" RowDefinitions="35,*,*,35,*" IsVisible="{Binding Storage.General.TrayBookmarks}">
 						<StackPanel Grid.Row="0" Orientation="Horizontal" Spacing="5">
-							<TextBox Name="BookmarkInput" Watermark="Add Bookmark" Width="170" Height="30"/>
+							<TextBox Name="BookmarkInput" Watermark="Add Bookmark" Width="170"/>
 							<Button Width="35" Click="OnAddBookmark">
 								<ic:SymbolIcon Symbol="Add" FontSize="18"/>
 							</Button>
@@ -764,7 +816,7 @@
 					</Grid>
 
 					
-					<DataGrid IsVisible="{Binding Storage.General.TrayBookmarks}" Grid.Row="5" Name="BookmarkGrid" Padding="0" ItemsSource="{Binding PreviewVM.CurrentFile.FavPages, Mode=OneWay}" SelectionMode="Single"
+					<DataGrid IsVisible="{Binding Storage.General.TrayBookmarks}" Grid.Row="5" Name="BookmarkGrid" ItemsSource="{Binding PreviewVM.CurrentFile.FavPages, Mode=OneWay}" SelectionMode="Single"
 								AutoGenerateColumns="False" IsReadOnly="True" GridLinesVisibility="None" LoadingRow="DataGrid_OnLoadingRow">
 						<DataGrid.Styles>
 							<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
@@ -778,7 +830,7 @@
 						</DataGrid.Columns>
 					</DataGrid>
 
-					<DataGrid Grid.Row="6" Name="RecentGrid" Padding="0" ItemsSource="{Binding PreviewVM.RecentFiles}" SelectionMode="Single"
+					<DataGrid Grid.Row="6" Name="RecentGrid" ItemsSource="{Binding PreviewVM.RecentFiles}" SelectionMode="Single"
 								AutoGenerateColumns="False" IsReadOnly="True" GridLinesVisibility="None" LoadingRow="DataGrid_OnLoadingRow">
 						<DataGrid.Styles>
 							<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
@@ -810,11 +862,8 @@
 									<TreeView.ContextMenu>
 										<ContextMenu Name="TreeMenu">
 											<MenuItem Header="Add Files" Click="OnAddFiles" Icon="{icxt:SymbolIconExtension Symbol=DocumentAdd}"/>
-										
 											<MenuItem Name="NewProjectMenu" Header="New Project" Icon="{icxt:SymbolIconExtension Symbol=FolderAdd}" Command="{Binding OpenProjectNewDia}" CommandParameter="{Binding $parent[Window]}"/>
-										
 											<MenuItem Name="EditMenu" Header="Edit Project" Icon="{icxt:SymbolIconExtension Symbol=Edit}" Command="{Binding OpenProjectEditDia}" CommandParameter="{Binding $parent[Window]}"/>
-												
 											<Separator></Separator>
 											<MenuItem Name="RemoveProjectMenu" Header="Remove" Click="OnRemoveProject" Icon="{icxt:SymbolIconExtension Symbol=Delete}"/>
 										</ContextMenu>
