--- a/Finn/Dialogs/xDeleteDia.axaml
+++ b/Finn/Dialogs/xDeleteDia.axaml
@@ -16,20 +16,19 @@
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
-	<Border BorderThickness="1" BorderBrush="{DynamicResource MenuFlyoutPresenterBackground}">
-		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
-			<Panel Grid.Row="0" IsHitTestVisible="False"/>
-			<StackPanel Grid.Row="1" Width="210" Height="140" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-				<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="10" Spacing="0">
-					<ic:SymbolIcon Symbol="Warning" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="Remove File?" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
-				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="5">
-					<Button Name="ConfirmButton" HotKey="Enter" Content="Confirm" Click="OnConfirm" Width="70" BorderBrush="{DynamicResource TextControlBorderBrush}"/>
-					<Button Name="CancelButton" HotKey="Escape" Content="Cancel" Click="OnCancel" Width="70" BorderBrush="{DynamicResource TextControlBorderBrush}"/>
-				</StackPanel>
+	<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
+		<Panel Grid.Row="0" IsHitTestVisible="False"/>
+		<StackPanel Grid.Row="1" Width="210" Height="140" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
+			<StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="10" Spacing="0">
+				<ic:SymbolIcon Symbol="Warning" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
+				<Label Content="Remove File?" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
 			</StackPanel>
-		</Grid>
-	</Border>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="5">
+				<Button Name="ConfirmButton" HotKey="Enter" Content="Confirm" Click="OnConfirm" Width="70" Background="{DynamicResource TextControlBackground}"/>
+				<Button Name="CancelButton" HotKey="Escape" Content="Cancel" Click="OnCancel" Width="70" Background="{DynamicResource TextControlBackground}"/>
+			</StackPanel>
+		</StackPanel>
+	</Grid>
+
     
 </Window>
