--- a/Finn/Dialogs/xIndexDia.axaml
+++ b/Finn/Dialogs/xIndexDia.axaml
@@ -18,37 +18,30 @@
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
-	<Border BorderThickness="1" BorderBrush="{DynamicResource MenuFlyoutPresenterBackground}">
-		<Grid RowDefinitions="70,*" ColumnDefinitions="*,*" VerticalAlignment="Top" Margin="5">
-			<Panel Grid.Row="0" IsHitTestVisible="False"/>
+	<Grid RowDefinitions="70,*" ColumnDefinitions="*,*" VerticalAlignment="Top" Margin="5">
+		<Panel Grid.Row="0" IsHitTestVisible="False"/>
 			
-				<StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
-					<ic:SymbolIcon Symbol="Globe" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
-					<Label Content="Indexed Content" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
-				</StackPanel>
+			<StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" Spacing="0" Margin="10">
+				<ic:SymbolIcon Symbol="Globe" VerticalAlignment="Center" HorizontalAlignment="Center" IconVariant="Regular" FontSize="30"/>
+				<Label Content="Indexed Content" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
+			</StackPanel>
 
-				<DataGrid Name="IndexGrid" Grid.Column="0" Grid.Row="1" Margin="5" ItemsSource="{Binding IndexedContent}" SelectionMode="Single" SelectedItem="{Binding SelectedIndexedContent}"
-						AutoGenerateColumns="False" IsReadOnly="True" GridLinesVisibility="None">
-					<DataGrid.Styles>
-						<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
-							<Setter Property="IsVisible" Value="false"/>
-						</Style>
-					</DataGrid.Styles>
+			<DataGrid Name="IndexGrid" Grid.Column="0" Grid.Row="1" ItemsSource="{Binding IndexedContent}" SelectionMode="Single" SelectedItem="{Binding SelectedIndexedContent}"
+					AutoGenerateColumns="False" IsReadOnly="True" GridLinesVisibility="None" VerticalAlignment="Stretch">
+				<DataGrid.Styles>
+					<Style Selector="DataGridCell:current /template/ Grid#FocusVisual">
+						<Setter Property="IsVisible" Value="false"/>
+					</Style>
+				</DataGrid.Styles>
 
-					<DataGrid.Columns>
-						<DataGridTextColumn Binding="{Binding Name}" Header="Name" Width="*" FontSize="{Binding Storage.General.FontSize}"/>
-					</DataGrid.Columns>
-				</DataGrid>
+				<DataGrid.Columns>
+					<DataGridTextColumn Binding="{Binding Name}" Header="Name" Width="*" FontSize="{Binding Storage.General.FontSize}"/>
+				</DataGrid.Columns>
+			</DataGrid>
 
-				<Border Grid.Column="1" Grid.Row="1" Margin="5">
-					<ScrollViewer>
-						<TextBox Text="{Binding SelectedIndexedContent.PlainText, Mode=OneWay}"/>
-					</ScrollViewer>
-				</Border>
+			<TextBox Grid.Column="1" Grid.Row="1" Text="{Binding SelectedIndexedContent.PlainText, Mode=OneWay}" VerticalAlignment="Stretch"/>
 
-				
-			
-		</Grid>
-	</Border>
+	</Grid>
+
     
 </Window>
