--- a/Finn/Dialogs/xMessageDia.axaml
+++ b/Finn/Dialogs/xMessageDia.axaml
@@ -16,7 +16,6 @@
         ExtendClientAreaToDecorationsHint="True"
 		x:DataType="vm:MainViewModel">
 
-	<Border BorderThickness="1" BorderBrush="{DynamicResource MenuFlyoutPresenterBackground}">
 		<Grid RowDefinitions="30,*" ColumnDefinitions="*" VerticalAlignment="Top" Margin="0">
 			<Panel Grid.Row="0" IsHitTestVisible="False"/>
 			<StackPanel Grid.Row="1" Width="300" Height="180" Orientation="Vertical" Spacing="10" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -28,11 +27,11 @@
 				<Label Name="MessageLabel" VerticalAlignment="Center"  HorizontalAlignment="Center"/>
 				
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="20">
-					<Button Name="Close" HotKey="Enter" Content="Accept" Width="70" BorderBrush="{DynamicResource TextControlBorderBrush}" Click="OnClose"/>
+					<Button Name="Close" HotKey="Enter" Content="Accept" Width="70" Background="{DynamicResource TextControlBackground}" Click="OnClose"/>
 				</StackPanel>
 				
 			</StackPanel>
 		</Grid>
-	</Border>
+
     
 </Window>
